fix/style: standardize title and spacing across pages

--- a/frontend/recipeapp/src/index.css
+++ b/frontend/recipeapp/src/index.css
@@ -351,6 +351,7 @@ p#searchDescription{
     height: 15%;
     margin-left: auto;
     margin-right:auto;
+    margin-top: 5%;
     padding-top: 3%;
     padding-bottom:2%;
     color: white;
